<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014. Jean-Francois Berube, all rights reserved.
  -->

<resources>

    <!-- Default meta data -->
    <string name="meta_data_no_playlist">Nothing is playing.</string>
    <string name="meta_data_unknown_title">Unknown title.</string>
    <string name="meta_data_unknown_artist">Unknown artist</string>
    <string name="meta_data_unknown">Unknown</string>

    <!-- Activities -->
    <string name="label_app_name" translatable="false">SkipShuffle</string>
    <string name="label_playlist">Current Playlist</string>
    <string name="label_playlist_selector">Select Music</string>

    <!-- Media scanner related stuff -->
    <string name="media_scan_start_title">"Searching for audio files…"</string>
    <string name="media_scan_done">Done scanning for media files.</string>

    <!-- Toasts -->
    <string name="haptic_feedback_off">Haptic feedback turned off.</string>
    <string name="haptic_feedback_on">Haptic feedback turned on.</string>
    <string name="no_media_player">Media player is not connected.</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="no_app_store">Cannot find Google store application.</string>

    <!-- Main menu -->
    <string name="menu_theme">Theme</string>
    <string name="menu_haptic_feedback">Haptic feedback toggle (vibration)</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Dialogs -->
    <string name="dialog_theme_title">Select a theme</string>
    <string name="dialog_media_scan_title">Scan media directories</string>
    <string name="dialog_media_scan_text">Do you want to search for music files?</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_app_rating_positive">Rate now</string>
    <string name="dialog_app_rating_neutral">Later</string>
    <string name="dialog_app_rating_negative">Never</string>
    <string name="dialog_app_rating_title">Rate SkipShuffle</string>
    <string name="dialog_app_rating_text">If you enjoy using SkipShuffle, please take a moment to rate the application. Thank you for your support!</string>
    <string name="dialog_song_info_title">Track info</string>

    <string-array name="dialog_theme_items" translatable="false">
        <item>Mono Light</item>
        <item>Mono Dark</item>
        <item>Neon</item>
        <item>Xmas</item>
        <item>Pink Panther</item>
        <item>Jack O\'Lantern</item>
        <item>Shamrock</item>
        <item>\'Murica</item>
        <item>Psychedelic</item>
        <item>Rasta</item>
        <item>USSR</item>
        <item>Tron</item>
        <item>Ramen</item>
        <item>Rainbow</item>
        <item>Metal</item>
        <item>Homer</item>
        <item>Kosher</item>
        <item>Mario</item>
        <item>Star Wars</item>
        <item>Nazi</item>
        <item>Locos Tacos</item>
        <item>Fruit Loops</item>
        <item>Ronaldo</item>
        <item>Cup A Tea</item>
        <item>Bacon</item>
        <item>Punjab</item>
    </string-array>

    <!-- Preferences -->
    <string name="pref_haptic_feedback" translatable="false">PREF_HAPTIC_FEEDBACK</string>
    <string name="pref_media_directories" translatable="false">PREF_MEDIA_DIRECTORIES</string>
    <string name="pref_current_playlist_id" translatable="false">PREF_CURRENT_PLAYLIST</string>
    <string name="pref_current_ui_type" translatable="false">PREF_CURRENT_UI_TYPE</string>
    <string name="pref_current_ui_view_mode" translatable="false">PREF_CURRENT_UI_VIEW_MODE</string>
    <string name="pref_number_times_app_opened" translatable="false">PREF_NUMBER_TIMES_APP_OPENED</string>
    <string name="pref_can_rate_app" translatable="false">PREF_CAN_RATE_APP</string>

    <!-- State info -->
    <string name="empty_list_view">Nothing to show.</string>

    <!-- Main navigation drawer -->
    <string name="drawer_header_text">Browse</string>

    <string-array name="drawer_menu">
        <item>Songs</item>
        <item>Artists</item>
        <item>Albums</item>
        <item>Genres</item>
        <item>Playlists</item>
    </string-array>

    <string-array name="adapter_types">
        <item>Songs</item>
        <item>Artists</item>
        <item>Albums</item>
        <item>Genres</item>
        <item>Playlists</item>
    </string-array>

    <!-- Track Metadata -->
    <string name="meta_data_title">Title</string>
    <string name="meta_data_artist">Artist</string>
    <string name="meta_data_album">Album</string>
    <string name="meta_data_duration">Duration</string>


    <!-- Content description for accessibility -->
    <string name="accessibility_play_pause">Play/Pause</string>
    <string name="accessibility_skip">Skip</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_skipshuffle" translatable="false">SkipShuffle</string>
    <string name="accessibility_playlist">Playlist</string>
    <string name="accessibility_background">Background</string>

</resources>
