<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015. Jean-François Bérubé, all rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="72dp"
    android:padding="@dimen/notification_padding"
    android:id="@+id/notif_all"
    android:orientation="horizontal">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="@dimen/notification_icon_holder_width"
        android:layout_height="fill_parent"
        android:gravity="center">

        <ImageView
            android:contentDescription="@string/accessibility_skipshuffle"
            android:layout_width="@dimen/notification_icon_w_h"
            android:layout_height="@dimen/notification_icon_w_h"
            android:id="@+id/imageView"
            android:src="@drawable/ic_notification"
            android:layout_gravity="center" />
    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/content_holder">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttons_background_image"
            android:layout_centerInParent="true"
            android:src="@drawable/notification_background"
            android:contentDescription="@string/accessibility_background" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:paddingRight="@dimen/null_size"
            android:paddingEnd="@dimen/null_size"
            android:paddingLeft="@dimen/notification_track_labels_padding_left"
            android:paddingStart="@dimen/notification_track_labels_padding_left"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/meta_data_unknown_title"
                android:singleLine="true"
                android:id="@+id/track_title"
                android:ellipsize="end"
                android:lines="1"
                android:textSize="@dimen/notification_track_title"
                android:longClickable="false"
                android:gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/meta_data_unknown_artist"
                android:id="@+id/track_artist"
                android:textSize="@dimen/notification_track_artist"
                android:ellipsize="end"
                android:lines="1"
                android:textStyle="italic"
                android:textColor="@color/playlist_item_track_artist_neon"
                android:gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="false"
            android:id="@+id/buttons_holder">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/buttons_background_image_overflow_protection"
                android:layout_centerInParent="true"
                android:src="@drawable/notification_background"
                android:contentDescription="@string/accessibility_background" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center|center_horizontal"
                android:id="@+id/buttons"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false">

                <ImageButton
                    android:contentDescription="@string/accessibility_prev"
                    android:layout_width="@dimen/notification_buttons_w_h"
                    android:layout_height="@dimen/notification_buttons_w_h"
                    android:id="@+id/notif_prev"
                    android:src="@drawable/prev_states"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:layout_weight="1" />

                <ImageButton
                    android:contentDescription="@string/accessibility_shuffle"
                    android:layout_width="@dimen/notification_buttons_w_h"
                    android:layout_height="@dimen/notification_buttons_w_h"
                    android:id="@+id/notif_shuffle"
                    android:longClickable="false"
                    android:src="@drawable/shuffle_states"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:layout_weight="1" />

                <ImageButton
                    android:contentDescription="@string/accessibility_play_pause"
                    android:layout_width="@dimen/notification_buttons_w_h"
                    android:layout_height="@dimen/notification_buttons_w_h"
                    android:id="@+id/notif_play"
                    android:src="@drawable/play_states"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:layout_weight="1" />

                <ImageButton
                    android:contentDescription="@string/accessibility_skip"
                    android:layout_width="@dimen/notification_buttons_w_h"
                    android:layout_height="@dimen/notification_buttons_w_h"
                    android:id="@+id/notif_skip"
                    android:src="@drawable/skip_states"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:cropToPadding="false"
                    android:layout_weight="1" />

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
