<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014. Jean-Francois Berube, all rights reserved.
  -->

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/topRow"
            android:layout_weight="1"
            android:background="#ffff320b"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:contentDescription="@string/accessibility_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playBtn"
                android:src="@drawable/play_states_neon"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <ImageButton
                android:contentDescription="@string/accessibility_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skipBtn"
                android:src="@drawable/skip_states_neon"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_gravity="center|right"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/centerRow"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ff14ff44"
            android:layout_gravity="center">
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:text="@string/meta_data_unknown_title"
                android:id="@+id/song_label"
                android:typeface="monospace"
                android:gravity="center"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:ellipsize="marquee"
                android:layout_weight="1" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/bottomRow"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#64c9ff0f">

            <ImageButton
                android:contentDescription="@string/accessibility_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/shuffleBtn"
                android:src="@drawable/shuffle_states_neon"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_weight="1" />

            <ImageButton
                android:contentDescription="@string/accessibility_playlist"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/playlistBtn"
                android:src="@drawable/playlist_states_neon"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_weight="1" />

            <ImageButton
                android:contentDescription="@string/accessibility_prev"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/prevBtn"
                android:src="@drawable/prev_states_neon"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone" />
    </LinearLayout>
    <!-- The navigation drawer -->
    <include layout="@layout/drawer_list"/>
</android.support.v4.widget.DrawerLayout>