<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/bottom">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/topRow"
            android:layout_above="@+id/centerRow">
            <ImageButton
                android:contentDescription="@string/accessibility_play_pause"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:id="@+id/playBtn"
                android:src="@drawable/play_states_neon"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <ImageButton
                android:contentDescription="@string/accessibility_skip"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:id="@+id/skipBtn"
                android:src="@drawable/skip_states_neon"
                android:scaleType="fitXY"
                android:background="@android:color/transparent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/centerRow"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
            <TextView
                android:layout_width="10dp"
                android:textSize="0sp"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:text="@string/meta_data_unknown_current_song_title"
                android:id="@+id/song_label"
                android:typeface="monospace"
                android:gravity="center"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:ellipsize="marquee"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomRow"
            android:gravity="center"
            android:layout_below="@+id/centerRow"
            android:orientation="horizontal"
            android:layout_alignParentBottom="false">
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
            <ImageButton
                android:contentDescription="@string/accessibility_shuffle"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:id="@+id/shuffleBtn"
                android:src="@drawable/shuffle_states_neon"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
            <ImageButton
                android:contentDescription="@string/accessibility_playlist"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:id="@+id/playlistBtn"
                android:src="@drawable/playlist_states_neon"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
            <ImageButton
                android:contentDescription="@string/accessibility_prev"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:id="@+id/prevBtn"
                android:src="@drawable/prev_states_neon"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/nav_drawer"
        android:layout_width="330dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:paddingTop="@dimen/navdrawer_padding_top"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp"
        android:background="@color/nav_drawer_background_neon"/>
</android.support.v4.widget.DrawerLayout>